--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,40 @@
+<!-- Home Page -->
+
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
+    <button ion-button icon-only menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <div *ngIf="user && userDetail">
+
+    <div *ngIf="!user.emailVerified">
+      <ion-card color="info">
+        <ion-card-content>
+            <ion-row>
+              <ion-col>
+                <strong>Your account is not verified</strong><br>
+                Please follow the link we send to your mail to verify your Account
+              </ion-col>
+            </ion-row>
+          <ion-item>
+            <button (click)="resendVerifMail()" ion-button item-end clear icon-end color="light">
+              Resend Mail
+              <ion-icon name="send"></ion-icon>
+            </button>
+          </ion-item>
+        </ion-card-content>
+      </ion-card>
+    </div>
+
+    <ion-fab right bottom>
+      <button (click)="createEvent()" ion-fab><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
+  </div>
 </ion-content>
